--- a/webui/src/main/webapp/app/maincontent/apiauto/scenario/scenario-detail.html
+++ b/webui/src/main/webapp/app/maincontent/apiauto/scenario/scenario-detail.html
@@ -239,10 +239,10 @@
                                                                                         <option value="!=">!=</option>
                                                                                         <option value="Contain">Contain</option>
                                                                                         <option value="!Contain">!Contain</option>
-                                                                                        <option value=">">></option>
-                                                                                        <option value=">=">>=</option>
-                                                                                        <option value="<"><</option>
-                                                                                        <option value="<="><=</option>
+                                                                                        <option value=">">&gt</option>
+                                                                                        <option value=">=">&gt=</option>
+                                                                                        <option value="<">&lt</option>
+                                                                                        <option value="<=">&lt=</option>
                                                                                         <option value="Contains Key">Contains Key</option>
                                                                                         <option value="!Contains Key">!Contains Key</option>
                                                                                         <option value="Contains Value">Contains Value</option>
